tests/Errors/Do.jack
class Do {
    method void m1 () {
        do Something.now;
    }
}
